--- a/templates/auth/register.html.twig
+++ b/templates/auth/register.html.twig
@@ -9,6 +9,9 @@
 
     <form data-action="submit->auth#register">
 
+        <label>Nom de la societe</label>
+        <input type="text" data-auth-target="company" required>
+
         <label>Email</label>
         <input type="email" data-auth-target="email" required>
 
